@@ -19,9 +19,8 @@ import org.bukkit.Material;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.File;
-import java.io.FileWriter;
 import java.io.IOException;
-import java.io.PrintWriter;
+import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.EnumMap;
@@ -42,13 +41,14 @@ import java.util.Set;
 @ToString
 public final class ConfigLoaderSpigot implements IConfigLoader
 {
+    @SuppressWarnings({"PMD.FieldNamingConventions", "squid:S3008"}) // TODO: Get rid of this.
     private static @Nullable ConfigLoaderSpigot INSTANCE;
     private final BigDoorsSpigot plugin;
     @ToString.Exclude
     private final IPLogger logger;
 
-    private static final List<String> DEFAULTPOWERBLOCK = List.of("GOLD_BLOCK");
-    private static final List<String> DEFAULTBLACKLIST = Collections.emptyList();
+    private static final List<String> DEFAULT_POWERBLOCK_TYPE = List.of("GOLD_BLOCK");
+    private static final List<String> DEFAULT_BLACKLIST = Collections.emptyList();
 
     private final Set<Material> powerBlockTypes = EnumSet.noneOf(Material.class);
     private final Set<Material> materialBlacklist = EnumSet.noneOf(Material.class);
@@ -150,93 +150,107 @@ public final class ConfigLoaderSpigot implements IConfigLoader
      */
     private void makeConfig()
     {
-        String defResPackUrl = "https://www.dropbox.com/s/0q6h8jkfjqrn1tp/BigDoorsResourcePack.zip?dl=1";
-        String defResPackUrl1_13 = "https://www.dropbox.com/s/al4idl017ggpnuq/BigDoorsResourcePack-1_13.zip?dl=1";
+        final String defResPackUrl = "https://www.dropbox.com/s/0q6h8jkfjqrn1tp/BigDoorsResourcePack.zip?dl=1";
+        final String defResPackUrl1_13 = "https://www.dropbox.com/s/al4idl017ggpnuq/BigDoorsResourcePack-1_13.zip?dl=1";
 
-        String[] enableRedstoneComment = {
+        final String[] enableRedstoneComment = {
             "Allow doors to be opened using redstone signals."};
-        String[] powerBlockTypeComment = {
+        final String[] powerBlockTypeComment = {
             "Choose the type of the power block that is used to open doors using redstone.",
             "A list can be found here: https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Material.html",
             "This is the block that will open the DoorBase attached to it when it receives a redstone signal.",
             "Multiple types are allowed."};
-        String[] blacklistComment = {
+        final String[] blacklistComment = {
             "List of blacklisted materials. Materials on this list can not be animated.",
             "Use the same list of materials as for the power blocks. For example, you would blacklist bedrock like so:",
             "  - BEDROCK"};
-        String[] maxDoorCountComment = {
+        final String[] maxDoorCountComment = {
             "Global maximum number of doors a player can own. You can set it to -1 to disable it this limit.",
             "Not even admins and OPs can bypass this limit!",
-            "Note that you can also use permissions for this, if you need more finely grained control using this node: ",
+            "Note that you can also use permissions for this, if you need more finely grained control using this node:",
             "'" + Limit.DOOR_COUNT.getUserPermission() + "x', where 'x' can be any positive value."};
-        String[] maxBlocksToMoveComment = {
+        final String[] maxBlocksToMoveComment = {
             "Global maximum number of doors a player can own. You can set it to -1 to disable it this limit.",
             "Not even admins and OPs can bypass this limit!",
-            "Note that you can also use permissions for this, if you need more finely grained control using this node: ",
+            "Note that you can also use permissions for this, if you need more finely grained control using this node:",
             "'" + Limit.BLOCKS_TO_MOVE.getUserPermission() + "x', where 'x' can be any positive value."};
-        String[] checkForUpdatesComment = {
+        final String[] checkForUpdatesComment = {
             "Allow this plugin to check for updates on startup. It will not download new versions!"};
-        String[] downloadDelayComment = {
+        final String[] downloadDelayComment = {
             "Time (in minutes) to delay auto downloading updates after their release.",
             "Setting it to 1440 means that updates will be downloaded 24h after their release.",
-            "This is useful, as it will mean that the update won't get downloaded if I decide to pull it for some reason",
-            "(within the specified timeframe, of course). Note that updates cannot be deferred for more than 1 week (10080 minutes)."};
-        String[] autoDLUpdateComment = {
+            "This is useful, as it will mean that the update won't get downloaded " +
+                "if I decide to pull it for some reason",
+            "(within the specified timeframe, of course). Note that updates cannot be " +
+                "deferred for more than 1 week (10080 minutes)."};
+        final String[] autoDLUpdateComment = {
             "Allow this plugin to automatically download new updates. They will be applied on restart."};
-        String[] allowStatsComment = {
+        final String[] allowStatsComment = {
             "Allow this plugin to send (anonymized) stats using bStats. Please consider keeping it enabled.",
-            "It has a negligible impact on performance and more users on stats keeps me more motivated to support this plugin!"};
-        String[] maxDoorSizeComment = {
+            "It has a negligible impact on performance and more users on " +
+                "stats keeps me more motivated to support this plugin!"};
+        final String[] maxDoorSizeComment = {
             "Global maximum number of blocks allowed in a door. You can set it to -1 to disable it this limit.",
             "If this number is exceeded, doors will open instantly and skip the animation.",
             "Not even admins and OPs can bypass this limit!",
-            "Note that you can also use permissions for this, if you need more finely grained control using this node: ",
+            "Note that you can also use permissions for this, " +
+                "if you need more finely grained control using this node: ",
             "'" + Limit.DOOR_SIZE.getUserPermission() + "x', where 'x' can be any positive value."};
-        String[] maxPowerBlockDistanceComment = {
+        final String[] maxPowerBlockDistanceComment = {
             "Global maximum distance between a door and its powerblock. You can set it to -1 to disable it this limit.",
             "The distance is measured from the center of the door.",
             "Not even admins and OPs can bypass this limit!",
-            "Note that you can also use permissions for this, if you need more finely grained control using this node: ",
+            "Note that you can also use permissions for this, " +
+                "if you need more finely grained control using this node: ",
             "'" + Limit.POWERBLOCK_DISTANCE.getUserPermission() + "x', where 'x' can be any positive value."};
-        String[] localeComment = {
+        final String[] localeComment = {
             "Determines which locale to use. Defaults to root."
         };
-        String[] resourcePackComment = {
-            "This plugin uses a support resource pack for things suchs as sound.",
-            "You can let this plugin load the resource pack for you or load it using your server.properties if you prefer that.",
-            "Of course, you can also disable the resource pack altogether as well. Just put \"NONE\" (without quotation marks) as url.",
+        final String[] resourcePackComment = {
+            "This plugin uses a support resource pack for things such as sound.",
+            "Note that this may cause issues if you server or another plugin also uses a resource pack!",
+            "When this is the case, it's recommended to disable this option and merge the pack with the other one.",
             "The default resource pack for 1.11.x/1.12.x is: '" + defResPackUrl + "'",
             "The default resource pack for 1.13.x is: '" + defResPackUrl1_13 + "'"};
-        String[] multiplierComment = {
+        final String[] multiplierComment = {
             "These multipliers affect the opening/closing speed of their respective doorBase types.",
-            "Note that the maximum speed is limited, so beyond a certain point raising these values won't have any effect.",
+            "Note that the maximum speed is limited, so beyond a certain point " +
+                "raising these values won't have any effect.",
             "To use the default values, set them to \"0.0\" or \"1.0\" (without quotation marks).",
             "Note that everything is optimized for default values, so it's recommended to leave this setting as-is."};
-        String[] compatibilityHooksComment = {
-            "Enable or disable compatibility hooks for certain plugins. If the plugins aren't installed, these options do nothing.",
+        final String[] compatibilityHooksComment = {
+            "Enable or disable compatibility hooks for certain plugins. " +
+                "If the plugins aren't installed, these options do nothing.",
             "When enabled, doors cannot be opened or created in areas not owned by the door's owner."};
-        String[] coolDownComment = {
+        final String[] coolDownComment = {
             "Cooldown on using doors. Time is measured in seconds."};
-        String[] cacheTimeoutComment = {
-            "Amount of time (in minutes) to cache power block positions in a chunk. -1 means no caching (not recommended!), 0 = infinite cache (not recommended either!).",
-            "It doesn't take up too much RAM, so it's recommended to leave this value high. It'll get updated automatically when needed anyway."};
-        String[] pricesComment = {
+        final String[] cacheTimeoutComment = {
+            "Amount of time (in minutes) to cache power block positions in a chunk. " +
+                "-1 means no caching (not recommended!), 0 = infinite cache (not recommended either!).",
+            "It doesn't take up too much RAM, so it's recommended to leave this value high. " +
+                "It'll get updated automatically when needed anyway."};
+        final String[] pricesComment = {
             "When Vault is present, you can set the price of doorBase creation here for every type of door.",
-            "You can use the word \"blockCount\" (without quotationmarks, case sensitive) as a variable that will be replaced by the actual blockCount.",
-            "Furthermore, you can use these operators: -, +, *, /, sqrt(), ^, %, min(a,b), max(a,b), abs(), and parentheses.",
-            "For example: \"price='max(10, sqrt(16)^4/100*blockCount)'\" would return 10 for a blockCount of 0 to 3 and 10.24 for a blockCount of 4.",
-            "You must always put the formula or simple value or whatever in quotation marks! Also, these settings do nothing if Vault isn't installed!"};
-        String[] headCacheTimeoutComment = {
-            "Amount of time (in minutes) to cache player heads. -1 means no caching (not recommended!), 0 = infinite cache (not recommended either!).",
+            "You can use the word \"blockCount\" (without quotationmarks, case sensitive) as a " +
+                "variable that will be replaced by the actual blockCount.",
+            "Furthermore, you can use these operators: -, +, *, /, sqrt(), ^, %, " +
+                "min(a,b), max(a,b), abs(), and parentheses.",
+            "For example: \"price='max(10, sqrt(16)^4/100*blockCount)'\" " +
+                "would return 10 for a blockCount of 0 to 3 and 10.24 for a blockCount of 4.",
+            "You must always put the formula or simple value or whatever in quotation marks! " +
+                "Also, these settings do nothing if Vault isn't installed!"};
+        final String[] headCacheTimeoutComment = {
+            "Amount of time (in minutes) to cache player heads. -1 means no caching (not recommended!), " +
+                "0 = infinite cache (not recommended either!).",
             "Takes up a bit more space than the powerblock caching, but makes GUI much faster."};
-        String[] debugComment = {
+        final String[] debugComment = {
             "Don't use this. Just leave it on false."};
-        String[] consoleLoggingComment = {
+        final String[] consoleLoggingComment = {
             "Write errors and exceptions to console. If disabled, they will only be written to the bigdoors log. ",
             "If enabled, they will be written to both the console and the bigdoors log."};
 
 
-        IConfigReader config = new ConfigReaderSpigot(plugin.getConfig());
+        final IConfigReader config = new ConfigReaderSpigot(plugin.getConfig());
 
 
         enableRedstone = addNewConfigEntry(config, "allowRedstone", true, enableRedstoneComment);
@@ -244,36 +258,36 @@ public final class ConfigLoaderSpigot implements IConfigLoader
         // No need to store the result here. It would be a list of Strings anyway, while we want blocks.
         // Because all entries need to be verified as valid blocks anyway, the list of power block types is
         // populated in the verification method.
-        addNewConfigEntry(config, "powerBlockTypes", DEFAULTPOWERBLOCK, powerBlockTypeComment,
+        addNewConfigEntry(config, "powerBlockTypes", DEFAULT_POWERBLOCK_TYPE, powerBlockTypeComment,
                           new MaterialVerifier(powerBlockTypes));
-        addNewConfigEntry(config, "materialBlacklist", DEFAULTBLACKLIST, blacklistComment,
+        addNewConfigEntry(config, "materialBlacklist", DEFAULT_BLACKLIST, blacklistComment,
                           new MaterialVerifier(materialBlacklist));
 
-        int maxDoorCount = addNewConfigEntry(config, "maxDoorCount", -1, maxDoorCountComment);
+        final int maxDoorCount = addNewConfigEntry(config, "maxDoorCount", -1, maxDoorCountComment);
         this.maxDoorCount = maxDoorCount > 0 ? OptionalInt.of(maxDoorCount) : OptionalInt.empty();
 
-        int maxBlocksToMove = addNewConfigEntry(config, "maxBlocksToMove", 100, maxBlocksToMoveComment);
+        final int maxBlocksToMove = addNewConfigEntry(config, "maxBlocksToMove", 100, maxBlocksToMoveComment);
         this.maxBlocksToMove = maxBlocksToMove > 0 ? OptionalInt.of(maxBlocksToMove) : OptionalInt.empty();
 
-        int maxDoorSize = addNewConfigEntry(config, "maxDoorSize", 500, maxDoorSizeComment);
+        final int maxDoorSize = addNewConfigEntry(config, "maxDoorSize", 500, maxDoorSizeComment);
         this.maxDoorSize = maxDoorSize > 0 ? OptionalInt.of(maxDoorSize) : OptionalInt.empty();
 
-        int maxPowerBlockDistance = addNewConfigEntry(config, "maxPowerBlockDistance", -1,
-                                                      maxPowerBlockDistanceComment);
+        final int maxPowerBlockDistance = addNewConfigEntry(config, "maxPowerBlockDistance", -1,
+                                                            maxPowerBlockDistanceComment);
         this.maxPowerBlockDistance = maxPowerBlockDistance > 0 ?
                                      OptionalInt.of(maxPowerBlockDistance) : OptionalInt.empty();
 
         checkForUpdates = addNewConfigEntry(config, "checkForUpdates", true, checkForUpdatesComment);
         autoDLUpdate = addNewConfigEntry(config, "auto-update", true, autoDLUpdateComment);
         // Multiply by 60 to get the time in seconds. Also, it's capped to 10080 minutes, better known as 1 week.
-        downloadDelay = addNewConfigEntry(config, "downloadDelay", 1440, downloadDelayComment,
-                                          (Integer x) -> Math.min(10080, x)) * 60L;
+        downloadDelay = addNewConfigEntry(config, "downloadDelay", 1_440, downloadDelayComment,
+                                          (Integer x) -> Math.min(10_080, x)) * 60L;
         allowStats = addNewConfigEntry(config, "allowStats", true, allowStatsComment);
 
         int idx = 0;
-        for (ProtectionCompat compat : ProtectionCompat.values())
+        for (final ProtectionCompat compat : ProtectionCompat.values())
         {
-            final String name = ProtectionCompat.getName(compat).toLowerCase();
+            final String name = ProtectionCompat.getName(compat).toLowerCase(Locale.ENGLISH);
             final boolean isEnabled = (boolean) config.get(name, false);
             addNewConfigEntry(config, ProtectionCompat.getName(compat), false,
                               ((idx++ == 0) ? compatibilityHooksComment : null));
@@ -299,7 +313,7 @@ public final class ConfigLoaderSpigot implements IConfigLoader
 
         String @Nullable [] usedMulitplierComment = multiplierComment;
         String @Nullable [] usedPricesComment = pricesComment;
-        for (DoorType type : BigDoors.get().getDoorTypeManager().getEnabledDoorTypes())
+        for (final DoorType type : BigDoors.get().getDoorTypeManager().getEnabledDoorTypes())
         {
             doorMultipliers.put(type, addNewConfigEntry(config, "multiplier_" + type, 0.0D, usedMulitplierComment));
             doorPrices.put(type, addNewConfigEntry(config, "price_" + type, "0", usedPricesComment));
@@ -351,9 +365,9 @@ public final class ConfigLoaderSpigot implements IConfigLoader
      * @return The value as read from the config file if it exists or the default value.
      */
     private <T> T addNewConfigEntry(IConfigReader config, String optionName, T defaultValue,
-                                    String @Nullable [] comment)
+                                    String @Nullable ... comment)
     {
-        ConfigEntry<T> option = new ConfigEntry<>(plugin.getPLogger(), config, optionName, defaultValue, comment);
+        final ConfigEntry<T> option = new ConfigEntry<>(plugin.getPLogger(), config, optionName, defaultValue, comment);
         configEntries.add(option);
         return option.getValue();
     }
@@ -376,10 +390,10 @@ public final class ConfigLoaderSpigot implements IConfigLoader
      * @return The value as read from the config file if it exists or the default value.
      */
     private <T> T addNewConfigEntry(IConfigReader config, String optionName, T defaultValue, String[] comment,
-                                    ConfigEntry.TestValue<T> verifyValue)
+                                    ConfigEntry.ITestValue<T> verifyValue)
     {
-        ConfigEntry<T> option = new ConfigEntry<>(plugin.getPLogger(), config, optionName, defaultValue, comment,
-                                                  verifyValue);
+        final ConfigEntry<T> option = new ConfigEntry<>(plugin.getPLogger(), config, optionName, defaultValue, comment,
+                                                        verifyValue);
         configEntries.add(option);
         return option.getValue();
     }
@@ -392,14 +406,14 @@ public final class ConfigLoaderSpigot implements IConfigLoader
         // Write all the config options to the config.yml.
         try
         {
-            File dataFolder = plugin.getDataFolder();
+            final File dataFolder = plugin.getDataFolder();
             if (!dataFolder.exists() && !dataFolder.mkdirs())
             {
                 logger.logThrowable(new IOException("Failed to create folder: \"" + dataFolder + "\""));
                 return;
             }
 
-            File saveTo = new File(plugin.getDataFolder(), "config.yml");
+            final File saveTo = new File(plugin.getDataFolder(), "config.yml");
             if (!saveTo.exists() && !saveTo.createNewFile())
             {
                 logger.logThrowable(new IOException("Failed to create file: \"" + saveTo + "\""));
@@ -419,22 +433,16 @@ public final class ConfigLoaderSpigot implements IConfigLoader
                 logger.warn("=======================================");
             }
 
-            try (FileWriter fw = new FileWriter(saveTo, false);
-                 PrintWriter pw = new PrintWriter(fw))
-            {
-                pw.println("# " + header + "\n");
+            final StringBuilder sb = new StringBuilder()
+                .append("# ").append(header).append('\n');
 
-                for (int idx = 0; idx < configEntries.size(); ++idx)
-                    pw.println(configEntries.get(idx).toString() +
-                                   // Only print an additional newLine if the next config option has a comment.
-                                   (idx < configEntries.size() - 1 && configEntries.get(idx + 1).getComment() == null ?
-                                    "" : "\n"));
-            }
-            catch (IOException e)
-            {
-                logger.logThrowable(e, "Could not write to config.yml! "
-                    + "Please contact pim16aap2 and show him the following stacktrace:");
-            }
+            for (int idx = 0; idx < configEntries.size(); ++idx)
+                sb.append(configEntries.get(idx).toString()).append('\n')
+                  // Only print an additional newLine if the next config option has a comment.
+                  .append((idx < configEntries.size() - 1 && configEntries.get(idx + 1).getComment() == null ?
+                           "" : '\n'));
+
+            Files.writeString(saveTo.toPath(), sb.toString());
         }
         catch (IOException e)
         {
@@ -571,7 +579,7 @@ public final class ConfigLoaderSpigot implements IConfigLoader
     @Override
     public String getPrice(DoorType type)
     {
-        String ret = doorPrices.get(type);
+        final String ret = doorPrices.get(type);
         if (ret != null)
             return ret;
         BigDoors.get().getPLogger().logThrowable(new IllegalStateException("No price found for type: " + type));
@@ -597,7 +605,7 @@ public final class ConfigLoaderSpigot implements IConfigLoader
      *
      * @author Pim
      */
-    private static class MaterialVerifier implements ConfigEntry.TestValue<List<String>>
+    private static class MaterialVerifier implements ConfigEntry.ITestValue<List<String>>
     {
         private final Set<Material> output;
 
@@ -636,13 +644,13 @@ public final class ConfigLoaderSpigot implements IConfigLoader
         private static List<String> verifyMaterials(List<String> input, Set<Material> output)
         {
             output.clear();
-            Iterator<String> it = input.iterator();
+            final Iterator<String> it = input.iterator();
             while (it.hasNext())
             {
-                String str = it.next();
+                final String str = it.next();
                 try
                 {
-                    Material mat = Material.valueOf(str);
+                    final Material mat = Material.valueOf(str);
                     if (output.contains(mat))
                     {
                         BigDoors.get().getPLogger()
